--- a/css/main.css
+++ b/css/main.css
@@ -831,11 +831,112 @@ label.error {
    Projects
    ========================================================================== */
 
-.member {
-  display: inline-block;
-  margin: 0 7px;
+/* project */
+.project {
+  position:relative;
+  padding: 0 0 30px 230px;
+  border-bottom: 1px dashed #e7e7e7;
+  margin-bottom:30px;
+  min-height: 200px;
 }
-
-.member img {
+.project-media {
+  width: 200px;
+  position:absolute;
+  top:0;
+  left: 0;
+}
+.project-media img {
+  width: 100%;
+  min-height: 100px;
+  max-height:200px;
+  border-radius: 6px 6px 36px 6px;
+}
+.project-name {
+  font-size: 40px;
+  line-height: 1.2em;
+  font-weight: 700;
+  letter-spacing: -.06em;
+}
+.project-name a {
+  color:#37acc2;
+  text-decoration: none;
+}
+.project-website {
+  color:#aaa;
+  font-size:12px;
+  display: block;
+  height:auto;
+  margin-bottom:1em;
+}
+.project-website strong {
+  font-weight: normal;
+  color:#666;
+}
+.project-website a {color:#aaa;}
+.project-website a:hover, .project-website a:focus {color:#37acc2;}
+.project-description {
+  color:#777;
+  font-size:14px;
+  letter-spacing: -.03em;
+  line-height:1.4em;
+  margin-bottom:1em;
+}
+.project-issues-title {
+  font-size:16px;
+  font-weight: normal;
+  line-height: 1.2em;
+  margin-bottom:.5em;
+}
+.project-issues ul { margin-bottom:20px;}
+.project-issues li {
+  float:left;
+  margin: 0 5px 5px 0;
+}
+.project-issues a {
+  display: inline-block;
+  padding: 7px;
+  background:#ddd;
+  border-radius: 4px;
+  font-size:14px;
+  line-height:1em;
+  color:#777;
+  text-decoration: none;
+}
+.project-issues a:hover, .project-issues a:focus {
+  background:#37acc2;
+  color:#fff;
+}
+.project-contributors {
+  -webkit-perspective: 50px;
+  -moz-perspective: 50px;
+  -o-perspective: 50px;
+  -ms-perspective: 50px;
+  perspective: 50px;
+}
+.project-contributor {
+  position:relative;
+  margin: 0 10px 10px 0;
+  display: block;
+  float:left;
+  width: 50px;
+  height: 50px;
+  overflow: hidden;
+  border-radius: 50%;
+  -webkit-transform-style: preserve-3d;
+  -moz-transform-style: preserve-3d;
+  -o-transform-style: preserve-3d;
+  -ms-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+}
+.project-contributor:nth-child(0n + 1) {box-shadow:0 0 1px 3px gold;}
+.project-contributor:nth-child(0n + 2) {box-shadow:0 0 1px 3px silver;}
+.project-contributor:nth-child(0n + 3) {box-shadow:0 0 1px 3px #c65510;}
+.project-contributor img {
+  position:absolute;
+  top:0;
+  left:0;
+  width: 50px;
+  height: 50px;
+  overflow: hidden;
   border-radius: 50%;
 }
