--- a/css/main.css
+++ b/css/main.css
@@ -66,7 +66,7 @@ h1 {
 h2 {
   font-size: 34px;
   font-weight: 700;
-  padding: 60px 0 10px;
+  padding: 0 0 10px;
   text-align: center;
 }
 
@@ -792,6 +792,7 @@ footer .license {
   width: 1000px;
   margin: 0 auto;
   position:relative;
+  padding-top: 60px;
 }
 
 .alert {
