--- a/css/main.css
+++ b/css/main.css
@@ -792,6 +792,9 @@ footer .license {
   width: 1000px;
   margin: 0 auto;
   position:relative;
+}
+
+.content .wrapper {
   padding-top: 60px;
 }
 
