Atualizada transição do preço dos eventos
Estava dando uma olhada na parte de eventos e vi que as transições do preço dos eventos estavam muito lentas, então dei uma olhada no CSS e vi que, no hover, seria melhor usar transformX do que transition na propriedade right.

Paul Irish explicando a questão da performance:
http://www.paulirish.com/2012/why-moving-elements-with-translate-is-better-than-posabs-topleft/

--- a/src/files/css/main.css
+++ b/src/files/css/main.css
@@ -1130,12 +1130,18 @@ label.error {
   font-size:14px;
   font-weight: bolder;
   border-radius: 4px 0 4px 0;
-  -webkit-transition: right 0.3s ease-out;
-  -moz-transition: right 0.3s ease-out;
-  -o-transition: right 0.3s ease-out;
-  transition: right 0.3s ease-out;
+  -webkit-transition: -webkit-transform 0.3s ease-out;
+  -moz-transition: -moz-transform 0.3s ease-out;
+  -o-transition: -o-transform 0.3s ease-out;
+  transition: transform 0.3s ease-out;
 }
-.event:hover .event-price  {right:58px;}
+.event:hover .event-price  {
+   -webkit-transform: translateX(-78px);
+   -moz-transform: translateX(-78px);
+   -ms-transform: translateX(-78px);
+   -o-transform: translateX(-78px);
+   transform: translateX(-78px);
+}
 .event-name {
   text-align: center;
   font-size: 25px;
