Arruma botão do gh ao lado das redes sociais

--- a/src/files/css/main.css
+++ b/src/files/css/main.css
@@ -197,6 +197,12 @@ footer {
   width: 101px !important;
 }
 
+.github-share-button {
+  width: 78px;
+  float: right;
+  margin: 13.5px 10px 0px -8px;
+}
+
 .fb_iframe_widget iframe {
   width: 84px !important;
 }
